# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.155 2005/04/29 06:25:13 agaffney Exp $

*GLI-0.1_alpha (4 Apr 2005)

  29 Apr 2005; Preston Cody <codeman@gentoo.org>
  Patches from chotchki (bug #90325) to improve CC networking.  untested.
  
  29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Proxies patch from chotchki (bug #90147). Fixed == instead of = typos in
  GLIStorageDevice (pointed out by chotchki). Fixed missing int()s. Split
  'custom' sync option into 'none' and 'snapshot'.

  28 Apr 2005; Preston Cody <codeman@gentoo.org>
  Added group-adding code to set_users in ArchTemplate

  27 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added post-install script code

  23 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed encapsulation issues in GLIClientController (bug #90141)

  22 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Update resizing code in GLIStorageDevice

  17 Apr 2005; Preston Cody <codeman@gentoo.org>
  Update AUTHORS, NEWS, TODO.  Added documentation to GLILogger.

  17 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Reverted change to ArchTemplate and added support for commented line in old
  code.

  16 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed _edit_config() to modify value in-place instead of commenting out and
  adding the new value to the end of the file.

  15 Apr 2005; Preston Cody <codeman@gentoo.org>
  Back.  Did the docuementation thang for ArchTemplate and ClientConfiguration.
  Also updated TODO list.

  14 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Use blackace's one-liner to add comments for all function for use with
  pythondoc.

  13 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Moved 'end >= device_sectors' check out of loop to check for next partition's
  start point (thanks to Marco Djukic). Fix >4 primary partitions on non-x86.