@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.155 2005/04/29 06:25:13 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.156 2005/04/29 06:40:30 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
 
@@ -10,7 +10,8 @@
   29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Proxies patch from chotchki (bug #90147). Fixed == instead of = typos in
   GLIStorageDevice (pointed out by chotchki). Fixed missing int()s. Split
-  'custom' sync option into 'none' and 'snapshot'.
+  'custom' sync option into 'none' and 'snapshot'. Minor fixes to
+  GLIStorageDevice as suggested by pychecker.
 
   28 Apr 2005; Preston Cody <codeman@gentoo.org>
   Added group-adding code to set_users in ArchTemplate
